# parameterizedTestExamplesCpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  runTests.sh
include/: Add.h  LeapYear.h  LeapYearCalendar.h
src/: CMakeLists.txt  LeapYear.cpp  LeapYearCalendar.cpp  main.cpp
test/: LeapYearFixtureCombinedWithParameterizedTests.cpp  LeapYearFixtureTests.cpp  LeapYearIterationTest.cpp  LeapYearMultipleParametersTests.cpp  LeapYearParameterizedTestFixture.cpp  LeapYearStandaloneTests.cpp
tests/: AddTypeParameterizedTests.cpp  AddTypishParameterizedTests.cpp  CMakeLists.txt  LeapYearFixtureCombinedWithParameterizedTests.cpp  LeapYearFixtureTests.cpp  LeapYearIterationTest.cpp  LeapYearMultipleParametersTests.cpp  LeapYearParameterizedTestFixture.cpp  LeapYearStandaloneTests.cpp
